--- a/style.css
+++ b/style.css
@@ -41,8 +41,15 @@ body{
     margin-top: 50px;
     margin-right: 5px;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .boxes {
     width: 40px;
+    height: 40px;
+    margin: 10px;
+    background-color: black;
+    color: #ffffff;
+    border-radius: 10px;
 }
